<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_general_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeader"
                android:inputType="text"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@id/etProductDescription"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_your_category"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"
                    android:inputType="none"/>


            </com.google.android.material.textfield.TextInputLayout>



            <EditText
                android:id="@+id/etProductDescription"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_optional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCategory"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@id/etPrice"/>

            <EditText
                android:id="@+id/etPrice"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etProductDescription"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/etOffer"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/offer_percentage_optional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPrice"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/tvProductDetails"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etOffer" />

            <EditText
                android:id="@+id/etSizes"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/sizes_optional_user_between_earch_sizes"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductDetails"
                android:inputType="text"/>

            <TextView
                android:id="@+id/tvUpdatedColors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/btnColors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnColors"
                app:layout_constraintTop_toTopOf="@id/btnColors" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnColors"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="COLORS"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSizes" />

            <TextView
                android:id="@+id/tvImagesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/btnImages"
                app:layout_constraintStart_toEndOf="@id/btnImages"
                app:layout_constraintTop_toTopOf="@id/btnImages" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnImages"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="IMAGES"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnColors" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:tintMode="@color/white"
        app:srcCompat="@drawable/baseline_drive_folder_upload_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
